[STR] remove the usage of STR."xxx" syntax